[gd_scene load_steps=9 format=3 uid="uid://cfbtmo61dtd0j"]

[ext_resource type="Texture2D" uid="uid://8edplubtbkbr" path="res://assets/UI/wood-box.png" id="1_kl4po"]
[ext_resource type="Script" path="res://prefab/UI/CharacterPanel.gd" id="1_v4ppb"]
[ext_resource type="Texture2D" uid="uid://bpt7n5fbi8xg5" path="res://assets/UI/text-box.png" id="2_wy6ci"]
[ext_resource type="FontFile" uid="uid://dabqnx5sqarav" path="res://assets/UI/Fonts/dogicapixelbold.otf" id="3_2xpwj"]
[ext_resource type="FontFile" uid="uid://bddtsccx0qour" path="res://assets/UI/Fonts/dogicapixel.otf" id="4_1edde"]
[ext_resource type="Texture2D" uid="uid://dnmhbqlysi5ph" path="res://assets/UI/red-button-normal.png" id="6_6iov6"]
[ext_resource type="Texture2D" uid="uid://cgoomtgcn04sq" path="res://assets/UI/red-button-pressed.png" id="7_q5wl6"]
[ext_resource type="Texture2D" uid="uid://cl20mjeo1aqyx" path="res://assets/UI/red-button-hover.png" id="8_ucclj"]

[node name="CharacterPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -106.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v4ppb")

[node name="BG" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_kl4po")
patch_margin_left = 24
patch_margin_top = 16
patch_margin_right = 24
patch_margin_bottom = 16

[node name="M" type="MarginContainer" parent="BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="V" type="VBoxContainer" parent="BG/M"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="HeadBG" type="NinePatchRect" parent="BG/M/V"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
texture = ExtResource("2_wy6ci")
region_rect = Rect2(0, 0, 32, 32)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Label" type="Label" parent="BG/M/V/HeadBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.298039, 0.917647, 0.368627, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.356863)
theme_override_fonts/font = ExtResource("3_2xpwj")
theme_override_font_sizes/font_size = 8
text = "Character"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsBG" type="NinePatchRect" parent="BG/M/V"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_wy6ci")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="BG/M/V/StatsBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BG/M/V/StatsBG/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BG/M/V/StatsBG/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BG/M/V/StatsBG/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2
alignment = 1

[node name="NTitle" type="Label" parent="BG/M/V/StatsBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.109804, 0.717647, 0.988235, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.172549)
theme_override_fonts/font = ExtResource("4_1edde")
theme_override_font_sizes/font_size = 8
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HTitle" type="Label" parent="BG/M/V/StatsBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.109804, 0.717647, 0.988235, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.172549)
theme_override_fonts/font = ExtResource("4_1edde")
theme_override_font_sizes/font_size = 8
text = "Leben"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ETitle" type="Label" parent="BG/M/V/StatsBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.109804, 0.717647, 0.988235, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.172549)
theme_override_fonts/font = ExtResource("4_1edde")
theme_override_font_sizes/font_size = 8
text = "Energie"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DTitle" type="Label" parent="BG/M/V/StatsBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.109804, 0.717647, 0.988235, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.172549)
theme_override_fonts/font = ExtResource("4_1edde")
theme_override_font_sizes/font_size = 8
text = "Damage"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LTitle" type="Label" parent="BG/M/V/StatsBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.109804, 0.717647, 0.988235, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.172549)
theme_override_fonts/font = ExtResource("4_1edde")
theme_override_font_sizes/font_size = 8
text = "Level
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="BG/M/V/StatsBG/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2
alignment = 1

[node name="Name" type="Label" parent="BG/M/V/StatsBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.976471, 0.564706, 0.0941176, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.309804)
theme_override_fonts/font = ExtResource("4_1edde")
theme_override_font_sizes/font_size = 8
text = "Name"
vertical_alignment = 1

[node name="Health" type="Label" parent="BG/M/V/StatsBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.976471, 0.564706, 0.0941176, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.309804)
theme_override_fonts/font = ExtResource("4_1edde")
theme_override_font_sizes/font_size = 8
text = "Leben"
vertical_alignment = 1

[node name="Energie" type="Label" parent="BG/M/V/StatsBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.976471, 0.564706, 0.0941176, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.309804)
theme_override_fonts/font = ExtResource("4_1edde")
theme_override_font_sizes/font_size = 8
text = "Energie"
vertical_alignment = 1

[node name="Damage" type="Label" parent="BG/M/V/StatsBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.976471, 0.564706, 0.0941176, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.309804)
theme_override_fonts/font = ExtResource("4_1edde")
theme_override_font_sizes/font_size = 8
text = "Damage"
vertical_alignment = 1

[node name="Level" type="Label" parent="BG/M/V/StatsBG/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.976471, 0.564706, 0.0941176, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.309804)
theme_override_fonts/font = ExtResource("4_1edde")
theme_override_font_sizes/font_size = 8
text = "Level
"
vertical_alignment = 1

[node name="OkBtn" type="TextureButton" parent="BG/M/V/StatsBG/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("6_6iov6")
texture_pressed = ExtResource("7_q5wl6")
texture_hover = ExtResource("8_ucclj")

[node name="Label" type="Label" parent="BG/M/V/StatsBG/MarginContainer/VBoxContainer/OkBtn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_1edde")
theme_override_font_sizes/font_size = 8
text = "Okay"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="BG/M/V/StatsBG/MarginContainer/VBoxContainer/OkBtn" to="." method="_on_ok_btn_button_down"]
